# openrag

./: .env.example  .gitignore  .pre-commit-config.yaml  .securitypolicies.yaml  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  PROJECT_STATUS.md  README.md  RELEASE.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  docker.yml  pre-commit.yml  release.yml  security.yml
configs/: config-ollama.yaml  config.yaml
examples/: basic_rag.py
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml
scripts/: test_ollama_integration.py
src/openrag/: __init__.py  cli.py  config.py
src/openrag/api/: __init__.py  app.py
src/openrag/chunking/: __init__.py  chunkers.py
src/openrag/core/: __init__.py  base.py  ingestion.py  pipeline.py  retriever.py
src/openrag/embeddings/: __init__.py  sentence_transformer.py
src/openrag/llms/: __init__.py  huggingface_llm.py  ollama_llm.py  openai_llm.py
src/openrag/loaders/: __init__.py  document_loader.py
src/openrag/vector_stores/: __init__.py  chroma_store.py  qdrant_store.py
tests/: conftest.py  test_chunking.py  test_config.py  test_llms.py
